# studio-player

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_project.yml
aur/: PKGBUILD
data/: player.html
data/locale/: en-US.ini
src/: StudioPlayerDock.cpp  StudioPlayerDock.hpp  plugin-main.cpp
